# CtypesPython

./: CMakeLists.txt  cfunct  main.cpp  testingC.py
